# Reminder-Tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: RestOverlay.tsx  Settings.tsx  WorkTimer.tsx
src/styles/: index.css
